# H2S

./: .gitignore  README.md  pyproject.toml
examples/: travering_through_links.py
source/: main.py
src/H2S/: Readme.md  h2s.py  scraper.py
src/H2S/mimes/: application.py  audio.py  font.py  image.py  message.py  model.py  multipart.py  text.py  video.py
