[build-system]
requires = [
	"hatchling",
	]
build-backend = "hatchling.build"

[project]
name = "H2S" 
version = "0.0.1"
authors = [
  { name="leyuskc", email="leyukc@temp.com" },
]
description = "Simple HAR or http archive parser or extractor"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
     "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/leyuskckiran1510/h2s"
"Bug Tracker" = "https://github.com/leyuskc/h2s/issues"
